# MATAR

./: MATAR_DEBUG_FLAG_FEATURE.md
examples/: CMakeLists.txt
examples/CI_PIVOT/Example1/: CMakeLists.txt  matar_matmul.cpp  timer.hpp
examples/CI_PIVOT/Example2/: CMakeLists.txt  matar_stream_triad.cpp
scripts/: build-matar.sh  matar-install.sh
src/include/: kokkos_types.h
